main-app/src/app/modules/calculate-values/components/calculate-values-form/calculate-values-form.component.less
.calculate-values-form {
  padding: 1rem 4rem;

  span {
    opacity: 0.75;
  }

  &__compare-toggle {
    margin: 0 0 16px;
    display: flex;
    gap: 1rem;

    .mat-icon {
      font-size: 1rem;
    }
  }

  &__top-divider {
    width: 100%;
    padding: 10px 0;
  }

  &__saved-variable {
    display: flex;
    align-items: flex-start;
    gap: 2rem;

    .mat-icon {
      font-size: 1.3rem;
    }
  }

  &__charts-wrapper {
    padding: 1rem 4rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;

    .highchart-wrapper {
      padding-top: 16px;
    }
  }

  &-title {
    display: flex;
    align-items: flex-end;
    gap: 5px;

    .mat-icon {
      font-size: 1rem;
    }
  }

  &-parameters {
    display: flex;
    column-gap: 2rem;
    width: 100%;
    justify-content: space-between;

    .description-span {
      padding-bottom: 18px;
    }

    &__examples {
      width: 30%;
      display: flex;
      flex-direction: column;
      align-items: center;
      padding: 16px;

      .list {
        height: 100%;
        width: 100%;
      }
    }

    &__divider {
      width: 100%;
      padding: 10px 0;
    }

    .last {
      margin-top: 13px;
    }

    &__system {
      width: 60%;
      display: flex;
      flex-direction: column;
      align-items: center;
      padding: 16px;

      &-axis {
        width: 100%;
      }

      &-range {
        width: 100%;
        display: flex;
        justify-content: space-between;

        .range-slider {
          width: calc(100% - 116px);
        }

        .step-field {
          width: 100px;
        }
      }

      &-variables {
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;

        .mat-form-field {
          width: 270px;
        }
      }

      &-characteristic {
        width: 100%;
      }
    }

    &__submit {
      width: 100%;

      .mat-raised-button {
        float: right;
      }
    }
  }

  &__compare-mode-dialog {
    width: 600px;
    height: 400px;
    display: flex;
    flex-direction: column;
    align-items: center;

    .description-span {
      padding-bottom: 18px;
    }
  }
}

